--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button id="submit-button">Submit</button>
     </div>
     <div id="bingo-card-section" style="display: none;">
-      <h2 id="card-h2">Bingo Card</h2>
+      <h2 id="card-h2">Your Bingo Card</h2>
         <div id="bingo-card" class="grid-container"></div>
     </div>
     <script src="script.js"></script>
