--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="input-section">
+        <h1>Welcome to Flamingo Bingo!</h1>
         <label for="name">Name:</label>
         <input type="text" id="name" required>
         <br>
